# gstreamer_multiplewindow

./: CMakeLists.txt  README.md
include/: streamengine.h  streamviewer.h
resources/: ScreenViewer_qml.qrc
resources/qml/: StreamWindow.qml
source/: main.cpp  streamengine.cpp  streamviewer.cpp
